[project]
name = "Querylith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-pinecone>=0.2.11",
    "langchain-together>=0.3.0",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
